FAANG file update

--- a/x22234144/Untitled.ipynb
+++ b/x22234144/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dc82cefb",
+   "id": "c073a67a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "051b1908",
+   "execution_count": 1,
+   "id": "bc0d9b30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,13 +53,13 @@
     "        json.dump(data, json_file, indent=4)\n",
     "\n",
     "# Example usage\n",
-    "csv_to_json('faang_stocks_pandemic_data.csv', 'faang_stocks_pandemic_data.json')\n"
+    "csv_to_json('FAANG.csv', 'FAANG.json')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d5f749f8",
+   "id": "9d98244e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "940e738c",
+   "id": "50cbeae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,13 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "856603b8",
+   "execution_count": 3,
+   "id": "30a03392",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
+    "from pymongo import MongoClient\n",
+    "\n",
     "\n",
     "def read_json_file(json_file_path):\n",
     "    with open(json_file_path, 'r') as json_file:\n",
@@ -136,7 +138,7 @@
     "        return data\n",
     "\n",
     "# Example usage\n",
-    "json_data = read_json_file('faang_stocks_pandemic_data.json')\n",
+    "json_data = read_json_file('FAANG.json')\n",
     "\n",
     "# Convert JSON data to a DataFrame\n",
     "df = pd.DataFrame(json_data)\n",
@@ -144,7 +146,7 @@
     "# MongoDB connection parameters\n",
     "mongo_uri = 'mongodb+srv://smulani239:Arif2212$@databaseprogramming.eavdhnn.mongodb.net'  # Replace with your MongoDB URI\n",
     "database_name = 'Database'\n",
-    "collection_name = 'FAANG'\n",
+    "collection_name = 'FAANGS'\n",
     "\n",
     "# Connect to MongoDB\n",
     "client = MongoClient(mongo_uri)\n",
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c14a3dc",
+   "id": "969f6471",
    "metadata": {},
    "source": [
     "## Mongo DB URI"
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24786035",
+   "id": "ebda86d6",
    "metadata": {},
    "source": [
     "mongodb+srv://smulani239:Arif2212$@databaseprogramming.eavdhnn.mongodb.net/"
@@ -178,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "30f4047c",
+   "id": "b2893f3a",
    "metadata": {},
    "outputs": [
     {
@@ -360,8 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b2487541",
+   "execution_count": 4,
+   "id": "b379228a",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +387,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "      <th>Date</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
@@ -399,62 +400,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>683</td>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>209.7899932861328</td>\n",
-       "      <td>206.27000427246094</td>\n",
+       "      <td>02-01-2020</td>\n",
+       "      <td>209.79</td>\n",
+       "      <td>206.27</td>\n",
        "      <td>206.75</td>\n",
-       "      <td>209.77999877929688</td>\n",
-       "      <td>12077100.0</td>\n",
-       "      <td>209.77999877929688</td>\n",
+       "      <td>209.78</td>\n",
+       "      <td>12077100</td>\n",
+       "      <td>209.7799988</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>684</td>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>210.39999389648438</td>\n",
-       "      <td>206.9499969482422</td>\n",
-       "      <td>207.2100067138672</td>\n",
-       "      <td>208.6699981689453</td>\n",
-       "      <td>11188400.0</td>\n",
-       "      <td>208.6699981689453</td>\n",
+       "      <td>03-01-2020</td>\n",
+       "      <td>210.40</td>\n",
+       "      <td>206.95</td>\n",
+       "      <td>207.21</td>\n",
+       "      <td>208.67</td>\n",
+       "      <td>11188400</td>\n",
+       "      <td>208.6699982</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>685</td>\n",
-       "      <td>2020-01-06</td>\n",
-       "      <td>212.77999877929688</td>\n",
-       "      <td>206.52000427246094</td>\n",
-       "      <td>206.6999969482422</td>\n",
-       "      <td>212.60000610351562</td>\n",
-       "      <td>17058900.0</td>\n",
-       "      <td>212.60000610351562</td>\n",
+       "      <td>06-01-2020</td>\n",
+       "      <td>212.78</td>\n",
+       "      <td>206.52</td>\n",
+       "      <td>206.70</td>\n",
+       "      <td>212.60</td>\n",
+       "      <td>17058900</td>\n",
+       "      <td>212.6000061</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>686</td>\n",
-       "      <td>2020-01-07</td>\n",
-       "      <td>214.5800018310547</td>\n",
+       "      <td>07-01-2020</td>\n",
+       "      <td>214.58</td>\n",
        "      <td>211.75</td>\n",
-       "      <td>212.82000732421875</td>\n",
-       "      <td>213.05999755859375</td>\n",
-       "      <td>14912400.0</td>\n",
-       "      <td>213.05999755859375</td>\n",
+       "      <td>212.82</td>\n",
+       "      <td>213.06</td>\n",
+       "      <td>14912400</td>\n",
+       "      <td>213.0599976</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>687</td>\n",
-       "      <td>2020-01-08</td>\n",
-       "      <td>216.24000549316406</td>\n",
-       "      <td>212.61000061035156</td>\n",
-       "      <td>213.0</td>\n",
-       "      <td>215.22000122070312</td>\n",
-       "      <td>13475000.0</td>\n",
-       "      <td>215.22000122070312</td>\n",
+       "      <td>08-01-2020</td>\n",
+       "      <td>216.24</td>\n",
+       "      <td>212.61</td>\n",
+       "      <td>213.00</td>\n",
+       "      <td>215.22</td>\n",
+       "      <td>13475000</td>\n",
+       "      <td>215.2200012</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -462,29 +458,15 @@
        "</div>"
       ],
       "text/plain": [
-       "              Date                High                 Low  \\\n",
-       "0  683  2020-01-02   209.7899932861328  206.27000427246094   \n",
-       "1  684  2020-01-03  210.39999389648438   206.9499969482422   \n",
-       "2  685  2020-01-06  212.77999877929688  206.52000427246094   \n",
-       "3  686  2020-01-07   214.5800018310547              211.75   \n",
-       "4  687  2020-01-08  216.24000549316406  212.61000061035156   \n",
-       "\n",
-       "                 Open               Close      Volume           Adj Close  \\\n",
-       "0              206.75  209.77999877929688  12077100.0  209.77999877929688   \n",
-       "1   207.2100067138672   208.6699981689453  11188400.0   208.6699981689453   \n",
-       "2   206.6999969482422  212.60000610351562  17058900.0  212.60000610351562   \n",
-       "3  212.82000732421875  213.05999755859375  14912400.0  213.05999755859375   \n",
-       "4               213.0  215.22000122070312  13475000.0  215.22000122070312   \n",
-       "\n",
-       "       Name  \n",
-       "0  Facebook  \n",
-       "1  Facebook  \n",
-       "2  Facebook  \n",
-       "3  Facebook  \n",
-       "4  Facebook  "
+       "         Date    High     Low    Open   Close    Volume    Adj Close      Name\n",
+       "0  02-01-2020  209.79  206.27  206.75  209.78  12077100  209.7799988  Facebook\n",
+       "1  03-01-2020  210.40  206.95  207.21  208.67  11188400  208.6699982  Facebook\n",
+       "2  06-01-2020  212.78  206.52  206.70  212.60  17058900  212.6000061  Facebook\n",
+       "3  07-01-2020  214.58  211.75  212.82  213.06  14912400  213.0599976  Facebook\n",
+       "4  08-01-2020  216.24  212.61  213.00  215.22  13475000  215.2200012  Facebook"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +478,7 @@
     "# MongoDB connection parameters\n",
     "mongo_uri = 'mongodb+srv://smulani239:Arif2212$@databaseprogramming.eavdhnn.mongodb.net/'  # Replace with your MongoDB URI\n",
     "database_name = 'Database'\n",
-    "collection_name = 'FAANG'\n",
+    "collection_name = 'FAANGS'\n",
     "\n",
     "# Connect to MongoDB\n",
     "client = MongoClient(mongo_uri)\n",
@@ -520,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a924ba48",
+   "id": "44049e8f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -528,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b24e5b7",
+   "id": "26fe64af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -536,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f58e9d4c",
+   "id": "83ecaa7b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -544,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ee737f",
+   "id": "0aff7902",
    "metadata": {},
    "outputs": [],
    "source": []
