FAANG ETL update

--- a/x22217061/FAANG ETL.ipynb
+++ b/x22217061/FAANG ETL.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "5676922f",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "      <th>Date</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
@@ -83,62 +82,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>683</td>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>209.7899932861328</td>\n",
-       "      <td>206.27000427246094</td>\n",
+       "      <td>02-01-2020</td>\n",
+       "      <td>209.79</td>\n",
+       "      <td>206.27</td>\n",
        "      <td>206.75</td>\n",
-       "      <td>209.77999877929688</td>\n",
-       "      <td>12077100.0</td>\n",
-       "      <td>209.77999877929688</td>\n",
+       "      <td>209.78</td>\n",
+       "      <td>12077100</td>\n",
+       "      <td>209.7799988</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>684</td>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>210.39999389648438</td>\n",
-       "      <td>206.9499969482422</td>\n",
-       "      <td>207.2100067138672</td>\n",
-       "      <td>208.6699981689453</td>\n",
-       "      <td>11188400.0</td>\n",
-       "      <td>208.6699981689453</td>\n",
+       "      <td>03-01-2020</td>\n",
+       "      <td>210.40</td>\n",
+       "      <td>206.95</td>\n",
+       "      <td>207.21</td>\n",
+       "      <td>208.67</td>\n",
+       "      <td>11188400</td>\n",
+       "      <td>208.6699982</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>685</td>\n",
-       "      <td>2020-01-06</td>\n",
-       "      <td>212.77999877929688</td>\n",
-       "      <td>206.52000427246094</td>\n",
-       "      <td>206.6999969482422</td>\n",
-       "      <td>212.60000610351562</td>\n",
-       "      <td>17058900.0</td>\n",
-       "      <td>212.60000610351562</td>\n",
+       "      <td>06-01-2020</td>\n",
+       "      <td>212.78</td>\n",
+       "      <td>206.52</td>\n",
+       "      <td>206.70</td>\n",
+       "      <td>212.60</td>\n",
+       "      <td>17058900</td>\n",
+       "      <td>212.6000061</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>686</td>\n",
-       "      <td>2020-01-07</td>\n",
-       "      <td>214.5800018310547</td>\n",
+       "      <td>07-01-2020</td>\n",
+       "      <td>214.58</td>\n",
        "      <td>211.75</td>\n",
-       "      <td>212.82000732421875</td>\n",
-       "      <td>213.05999755859375</td>\n",
-       "      <td>14912400.0</td>\n",
-       "      <td>213.05999755859375</td>\n",
+       "      <td>212.82</td>\n",
+       "      <td>213.06</td>\n",
+       "      <td>14912400</td>\n",
+       "      <td>213.0599976</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>687</td>\n",
-       "      <td>2020-01-08</td>\n",
-       "      <td>216.24000549316406</td>\n",
-       "      <td>212.61000061035156</td>\n",
-       "      <td>213.0</td>\n",
-       "      <td>215.22000122070312</td>\n",
-       "      <td>13475000.0</td>\n",
-       "      <td>215.22000122070312</td>\n",
+       "      <td>08-01-2020</td>\n",
+       "      <td>216.24</td>\n",
+       "      <td>212.61</td>\n",
+       "      <td>213.00</td>\n",
+       "      <td>215.22</td>\n",
+       "      <td>13475000</td>\n",
+       "      <td>215.2200012</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -146,29 +140,15 @@
        "</div>"
       ],
       "text/plain": [
-       "              Date                High                 Low  \\\n",
-       "0  683  2020-01-02   209.7899932861328  206.27000427246094   \n",
-       "1  684  2020-01-03  210.39999389648438   206.9499969482422   \n",
-       "2  685  2020-01-06  212.77999877929688  206.52000427246094   \n",
-       "3  686  2020-01-07   214.5800018310547              211.75   \n",
-       "4  687  2020-01-08  216.24000549316406  212.61000061035156   \n",
-       "\n",
-       "                 Open               Close      Volume           Adj Close  \\\n",
-       "0              206.75  209.77999877929688  12077100.0  209.77999877929688   \n",
-       "1   207.2100067138672   208.6699981689453  11188400.0   208.6699981689453   \n",
-       "2   206.6999969482422  212.60000610351562  17058900.0  212.60000610351562   \n",
-       "3  212.82000732421875  213.05999755859375  14912400.0  213.05999755859375   \n",
-       "4               213.0  215.22000122070312  13475000.0  215.22000122070312   \n",
-       "\n",
-       "       Name  \n",
-       "0  Facebook  \n",
-       "1  Facebook  \n",
-       "2  Facebook  \n",
-       "3  Facebook  \n",
-       "4  Facebook  "
+       "         Date    High     Low    Open   Close    Volume    Adj Close      Name\n",
+       "0  02-01-2020  209.79  206.27  206.75  209.78  12077100  209.7799988  Facebook\n",
+       "1  03-01-2020  210.40  206.95  207.21  208.67  11188400  208.6699982  Facebook\n",
+       "2  06-01-2020  212.78  206.52  206.70  212.60  17058900  212.6000061  Facebook\n",
+       "3  07-01-2020  214.58  211.75  212.82  213.06  14912400  213.0599976  Facebook\n",
+       "4  08-01-2020  216.24  212.61  213.00  215.22  13475000  215.2200012  Facebook"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +160,7 @@
     "# MongoDB connection parameters\n",
     "mongo_uri = 'mongodb+srv://smulani239:Arif2212$@databaseprogramming.eavdhnn.mongodb.net/'  # Replace with your MongoDB URI\n",
     "database_name = 'Database'\n",
-    "collection_name = 'FAANG'\n",
+    "collection_name = 'FAANGS'\n",
     "\n",
     "# Connect to MongoDB\n",
     "client = MongoClient(mongo_uri)\n",
@@ -203,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "20fdfa2c",
    "metadata": {},
    "outputs": [
@@ -228,7 +208,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "      <th>Date</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
@@ -242,62 +221,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>683</td>\n",
-       "      <td>2020-01-02</td>\n",
-       "      <td>209.7899932861328</td>\n",
-       "      <td>206.27000427246094</td>\n",
+       "      <td>02-01-2020</td>\n",
+       "      <td>209.79</td>\n",
+       "      <td>206.27</td>\n",
        "      <td>206.75</td>\n",
-       "      <td>209.77999877929688</td>\n",
-       "      <td>12077100.0</td>\n",
-       "      <td>209.77999877929688</td>\n",
+       "      <td>209.78</td>\n",
+       "      <td>12077100</td>\n",
+       "      <td>209.7799988</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>684</td>\n",
-       "      <td>2020-01-03</td>\n",
-       "      <td>210.39999389648438</td>\n",
-       "      <td>206.9499969482422</td>\n",
-       "      <td>207.2100067138672</td>\n",
-       "      <td>208.6699981689453</td>\n",
-       "      <td>11188400.0</td>\n",
-       "      <td>208.6699981689453</td>\n",
+       "      <td>03-01-2020</td>\n",
+       "      <td>210.40</td>\n",
+       "      <td>206.95</td>\n",
+       "      <td>207.21</td>\n",
+       "      <td>208.67</td>\n",
+       "      <td>11188400</td>\n",
+       "      <td>208.6699982</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>685</td>\n",
-       "      <td>2020-01-06</td>\n",
-       "      <td>212.77999877929688</td>\n",
-       "      <td>206.52000427246094</td>\n",
-       "      <td>206.6999969482422</td>\n",
-       "      <td>212.60000610351562</td>\n",
-       "      <td>17058900.0</td>\n",
-       "      <td>212.60000610351562</td>\n",
+       "      <td>06-01-2020</td>\n",
+       "      <td>212.78</td>\n",
+       "      <td>206.52</td>\n",
+       "      <td>206.70</td>\n",
+       "      <td>212.60</td>\n",
+       "      <td>17058900</td>\n",
+       "      <td>212.6000061</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>686</td>\n",
-       "      <td>2020-01-07</td>\n",
-       "      <td>214.5800018310547</td>\n",
+       "      <td>07-01-2020</td>\n",
+       "      <td>214.58</td>\n",
        "      <td>211.75</td>\n",
-       "      <td>212.82000732421875</td>\n",
-       "      <td>213.05999755859375</td>\n",
-       "      <td>14912400.0</td>\n",
-       "      <td>213.05999755859375</td>\n",
+       "      <td>212.82</td>\n",
+       "      <td>213.06</td>\n",
+       "      <td>14912400</td>\n",
+       "      <td>213.0599976</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>687</td>\n",
-       "      <td>2020-01-08</td>\n",
-       "      <td>216.24000549316406</td>\n",
-       "      <td>212.61000061035156</td>\n",
-       "      <td>213.0</td>\n",
-       "      <td>215.22000122070312</td>\n",
-       "      <td>13475000.0</td>\n",
-       "      <td>215.22000122070312</td>\n",
+       "      <td>08-01-2020</td>\n",
+       "      <td>216.24</td>\n",
+       "      <td>212.61</td>\n",
+       "      <td>213.00</td>\n",
+       "      <td>215.22</td>\n",
+       "      <td>13475000</td>\n",
+       "      <td>215.2200012</td>\n",
        "      <td>Facebook</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -305,29 +279,15 @@
        "</div>"
       ],
       "text/plain": [
-       "              Date                High                 Low  \\\n",
-       "0  683  2020-01-02   209.7899932861328  206.27000427246094   \n",
-       "1  684  2020-01-03  210.39999389648438   206.9499969482422   \n",
-       "2  685  2020-01-06  212.77999877929688  206.52000427246094   \n",
-       "3  686  2020-01-07   214.5800018310547              211.75   \n",
-       "4  687  2020-01-08  216.24000549316406  212.61000061035156   \n",
-       "\n",
-       "                 Open               Close      Volume           Adj Close  \\\n",
-       "0              206.75  209.77999877929688  12077100.0  209.77999877929688   \n",
-       "1   207.2100067138672   208.6699981689453  11188400.0   208.6699981689453   \n",
-       "2   206.6999969482422  212.60000610351562  17058900.0  212.60000610351562   \n",
-       "3  212.82000732421875  213.05999755859375  14912400.0  213.05999755859375   \n",
-       "4               213.0  215.22000122070312  13475000.0  215.22000122070312   \n",
-       "\n",
-       "       Name  \n",
-       "0  Facebook  \n",
-       "1  Facebook  \n",
-       "2  Facebook  \n",
-       "3  Facebook  \n",
-       "4  Facebook  "
+       "         Date    High     Low    Open   Close    Volume    Adj Close      Name\n",
+       "0  02-01-2020  209.79  206.27  206.75  209.78  12077100  209.7799988  Facebook\n",
+       "1  03-01-2020  210.40  206.95  207.21  208.67  11188400  208.6699982  Facebook\n",
+       "2  06-01-2020  212.78  206.52  206.70  212.60  17058900  212.6000061  Facebook\n",
+       "3  07-01-2020  214.58  211.75  212.82  213.06  14912400  213.0599976  Facebook\n",
+       "4  08-01-2020  216.24  212.61  213.00  215.22  13475000  215.2200012  Facebook"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
