Final Code Update

--- a/x22217061/FAANG ETL - Copy.ipynb
+++ b/x22217061/FAANG ETL - Copy.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5676922f",
    "metadata": {},
    "outputs": [
@@ -136,7 +136,7 @@
        "4  08-01-2020  216.24  212.61  213.00  215.22  13475000  215.2200012  Facebook"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,6 +167,27 @@
     "df = df.drop('_id', axis=1)\n",
     "# Display the DataFrame\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "daaa0ac6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'High', 'Low', 'Open', 'Close', 'Volume', 'Adj Close', 'Name'], dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
